@@ -1,6 +1,7 @@
 a2x
 align
 arg
+datetime
 errno
 fnwrap1
 fnwrap1c
