@@ -1,7 +1,3 @@
-  * The bisonc++.cc skeleton's error recovery procedure now saves the
-    unexpected token, then matches the next _error_ state and reinserts the
-    unexpected token when appropriate. 
-
 - %nonassoc should probably produce an error when %nonassoc operators are used
   repeatedly. 
 
