@@ -1,2 +1,2 @@
-#define VERSION "2.3.2"
+#define VERSION "2.4.0"
 #define YEARS   "2005-2007"
