@@ -1,8 +1,17 @@
 #include "generator.ih"
 
+namespace
+{
+    DateTime dtime;
+}
+
 void Generator::filter(istream &in, ostream &out) const
 {
     Terminal::inserter(&Terminal::plainName);
+
+    out << "// This file was generated by Bisonc++ V" << ::version << 
+           " on " << dtime << "\n" <<
+            endl;
 
     while (getline(in, d_line))
     {
