@@ -7,11 +7,14 @@
 
 #include <bobcat/msg>
 #include <bobcat/fnwrap1c>
+#include <bobcat/datetime>
 
 #include "../rules/rules.h"
 #include "../parser/parser.h"
 #include "../terminal/terminal.h"
 #include "../production/production.h"
+
+extern char version[];
 
 using namespace std;
 using namespace FBB;
