@@ -1,4 +1,4 @@
-bisonc++ (2.3.2) 
+bisonc++ (2.4.0) 
 
   * Not yet distributed
 
@@ -38,10 +38,17 @@ bisonc++ (2.3.2)
             }
         ;
 
+  * The error recovery procedure in skeleton's bisonc++.cc skeleton file was
+    reimplemented. As a side effect the internally used function
+    'ParserBase::checkEOF()' could be removed.
+
   * #line directives in rule action blocks now correctly identify the grammar
     specification file in which the action block was defined.
 
   * Extra empty line at the end of state transition tables removed
+
+  * Files generated by Bisonc++ report Bisonc++'s version and the file 
+    construction time in their first line.
 
 bisonc++ (2.3.1)
 
